syntax = "proto3";

package pb;
option go_package = "./;pb";

//心跳
message Ping{
  int64 timeStamp = 1;
}

message ReqLogin{
  string userName = 1;
	string passWord = 2;
}

message ResLogin{
  int64 errCode = 1;
  string userName = 2;
}